peac_dev/force-app/main/default/objects/Variable_Payment__c/Variable_Payment__c.object-meta.xml
<CustomObject>
    <label>Variable Payment</label>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Variable Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variable Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>