peac_dev/force-app/main/default/objects/Variable_Payment__c/fields/of_payments__c.field-meta.xml
<CustomField>
    <fullName>of_payments__c</fullName>
    <label># of payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>