peac_dev/force-app/main/default/objects/Variable_Payment__c/fields/Total_Number_of_Payment_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Payment_Hidden__c</fullName>
    <label>Total Number of Payment (Hidden)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>