peac_dev/force-app/main/default/objects/Variable_Payment__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
   Opportunity__r.IsClosed
)</errorConditionFormula>
    <errorMessage>Variable Payments may not be edited when the related opportunity is in a closed stage.</errorMessage>
</ValidationRule>